Actualización de componentes e imágenes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,7 +65,7 @@ a {
 .navbarHeader__item > a {
   font-size: 16px !important;
   font-weight: 400 !important;
-  color: white !important;
+  color: #010830cc !important;
   font-family: "Roboto", sans-serif;
   margin: 0px 5px;
 }
